Fixed spacing at the top of the contact form.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,7 +91,7 @@ footer {
 }
 
 form {
-    padding: 20px 20px 0px 20px;
+    padding: 0px 20px 20px 20px;
 }
 
 input {
